// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render empty Url 1`] = `
<div>
  No data available for
</div>
`;

exports[`Should render full Url 1`] = `
Array [
  <div
    className="fr-callout fr-mb-3w"
  >
    <h4
      className="fr-callout__title"
    >
      <a
        href="https://www.fabrique.social.gouv.fr"
        rel="noreferrer noopener"
        target="_blank"
      >
        https://www.fabrique.social.gouv.fr
      </a>
    </h4>
    <p
      className="fr-callout__text"
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        fabrique
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        social
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        sante
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        travail
      </button>
      <svg
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <polyline
          points="12 6 12 12 16 14"
        />
      </svg>
      <span
        title="2021-08-17T22:57:01.853Z"
      >
        Mise à jour il y a :
         
        4 mois
      </span>
    </p>
    <div>
      <img
        alt="Copie d'écran de https://www.fabrique.social.gouv.fr"
        src="https://dashlord.incubateur.net/report/aHR0cHM6Ly9hY2Nlc2xpYnJlLmJldGEuZ291di5mcg==/screenshot.jpeg"
      />
    </div>
  </div>,
  <div
    id="lighthouse"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        LightHouse
      </h5>
      <span>
        Informations collectées par l'outil Google LightHouse
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/lhr.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col"
        >
          <div>
            Moins de 25% des critères d'accessibilité peuvent être testés automatiquement,
             
            <strong>
              une expertise manuelle est requise
            </strong>
            .
            <br />
            <br />
            Ce score ne représente pas le score RGAA mais une partie des bonnes pratiques de base à appliquer.
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Accessibility
            </div>
            <div>
              93%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Performance
            </div>
            <div>
              45%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              SEO
            </div>
            <div>
              90%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Best Practices
            </div>
            <div>
              93%
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              First contentful Paint
            </div>
            <div>
              1.2s
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Time to interactive
            </div>
            <div>
              3.5s
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Total requests
            </div>
            <div>
              51
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Total weight
            </div>
            <div>
              7.6Mb
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="dependabot"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Dependabot
      </h5>
      <span>
        <span>
          Scan des vulnérabiliés du dépôt Github
           
          <a
            href="https://github.com/SocialGouv/www"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "white",
              }
            }
            target="_blank"
          >
            https://github.com/SocialGouv/www
          </a>
        </span>
      </span>
      <a
        href="https://github.com/SocialGouv/www/security/dependabot"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary : 
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          D
        </button>
      </h3>
      <div
        className="fr-table"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Sévérité
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Dépendance vulnérable
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Vulnérabilités
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  HIGH
                </button>
              </td>
              <td>
                trim
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2020-7753"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2020-7753
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-w5p7-h5w8-2hfq"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-w5p7-h5w8-2hfq
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  HIGH
                </button>
              </td>
              <td>
                glob-parent
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2020-28469"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2020-28469
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-ww39-953v-wcq6"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-ww39-953v-wcq6
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                highlight.js
              </td>
              <td>
                <p>
                  <a
                    href="https://github.com/highlightjs/highlight.js/security/advisories/GHSA-7wwv-vh3v-89cq"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-7wwv-vh3v-89cq
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-7wwv-vh3v-89cq"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-7wwv-vh3v-89cq
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                browserslist
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-23364"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-23364
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-w8qv-6jwh-64r5"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-w8qv-6jwh-64r5
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                postcss
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-23368"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-23368
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-hwj9-h5mp-3pm3"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-hwj9-h5mp-3pm3
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                postcss
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-23368"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-23368
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-hwj9-h5mp-3pm3"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-hwj9-h5mp-3pm3
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                path-parse
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-23343"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-23343
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-hj48-42vr-x3v9"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-hj48-42vr-x3v9
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                next
              </td>
              <td>
                <p>
                  <a
                    href="https://github.com/vercel/next.js/security/advisories/GHSA-vxf5-wxwp-m7g9"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-vxf5-wxwp-m7g9
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-37699"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-37699
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-vxf5-wxwp-m7g9"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-vxf5-wxwp-m7g9
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                url-parse
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-3664"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-3664
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-hh27-ffr2-f2jc"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-hh27-ffr2-f2jc
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  LOW
                </button>
              </td>
              <td>
                highlight.js
              </td>
              <td>
                <p>
                  <a
                    href="https://github.com/highlightjs/highlight.js/security/advisories/GHSA-vfrc-7r7c-w9mx"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-vfrc-7r7c-w9mx
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2020-26237"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2020-26237
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-vfrc-7r7c-w9mx"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-vfrc-7r7c-w9mx
                  </a>
                  <br />
                </p>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="codescan"
  />,
  <div
    id="updownio"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Temps de réponse
      </h5>
      <span>
        Informations collectées par updown.io
      </span>
      <a
        href="https://updown.io/rt57"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Taux de disponibilité sur un mois glissant
            </div>
            <div>
              100%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Temps de réponse
            </div>
            <div>
              91ms
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              APDEX
            </div>
            <div>
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                1
              </button>
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              Certificat TLS
               
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                valide
              </button>
            </div>
            <div>
              expire le 19/10/2021
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="testssl"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        SSL
      </h5>
      <span>
        Informations collectées via testssl.sh
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/testssl.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col"
        >
          <h3>
            Scan Summary :
             
            <button
              className=""
              onClick={[Function]}
              type="button"
            >
              A+
            </button>
          </h3>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="http"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        HTTP
      </h5>
      <span>
        Informations collectées par le Mozilla HTTP observatory
      </span>
      <a
        href="https://observatory.mozilla.org/analyze/www.fabrique.social.gouv.fr"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary :
         
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          A+
        </button>
      </h3>
      0
    </div>
  </div>,
  <div
    id="thirdparties"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Third parties
      </h5>
      <span>
        Scripts tiers embarqués dans la page web
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Cookies
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Cookies
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Domaine
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                HTTP Only
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Secure
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                _pk_ses.2.6321
              </td>
              <td>
                www.fabrique.social.gouv.fr
              </td>
              <td>
                ❌
              </td>
              <td>
                ❌
              </td>
            </tr>
            <tr>
              <td>
                _pk_id.2.6321
              </td>
              <td>
                www.fabrique.social.gouv.fr
              </td>
              <td>
                ❌
              </td>
              <td>
                ❌
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            End Points
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Flag
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Hostname
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                IP
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                City
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Country
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <svg
                  style={
                    Object {
                      "width": 60,
                    }
                  }
                  viewBox="0 85.333 512 341.333"
                >
                  <title>
                    France
                  </title>
                  <path
                    d="M0 85.331h512v341.337H0z"
                    fill="#FFF"
                  />
                  <path
                    d="M0 85.331h170.663v341.337H0z"
                    fill="#0052B4"
                  />
                  <path
                    d="M341.337 85.331H512v341.337H341.337z"
                    fill="#D80027"
                  />
                </svg>
              </td>
              <td>
                www.fabrique.social.gouv.fr
              </td>
              <td>
                20.74.14.77
              </td>
              <td>
                Paris
              </td>
              <td>
                France
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="zap"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        OWASP
      </h5>
      <span>
        Scan de vulnérabiliés OWASP baseline
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/zap.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Owasp
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Risk/Confidence
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                CSP: Wildcard Directive
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                CSP: style-src unsafe-inline
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                Reverse Tabnabbing
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (High)
                </button>
              </td>
              <td>
                Server Leaks Version Information via "Server" HTTP Response Header Field
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (High)
                </button>
              </td>
              <td>
                In Page Banner Information Leak
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Incomplete or No Cache-control Header Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Permissions Policy Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Informational (Medium)
                </button>
              </td>
              <td>
                Storable and Cacheable Content
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Informational (Medium)
                </button>
              </td>
              <td>
                Modern Web Application
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Informational (Medium)
                </button>
              </td>
              <td>
                Base64 Disclosure
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="nuclei"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Nuclei
      </h5>
      <span>
        Détection d'erreurs de configuration et vulnérabilités
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Nuclei
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Séverité
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                id
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Matcher
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                nginx-version
              </td>
              <td>
                nginx version detect
              </td>
              <td />
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                tech-detect
              </td>
              <td>
                Wappalyzer Technology Detection
              </td>
              <td>
                nginx
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                can-i-take-over-dns
              </td>
              <td>
                Can I Take Over DNS - Fingerprint
              </td>
              <td>
                azure
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="wappalyzer"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Wappalyzer
      </h5>
      <span>
        Détection des technologies
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Wappalyzer
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Categories
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Website
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Node.js
              </td>
              <td>
                Programming languages
              </td>
              <td>
                <a
                  href="http://nodejs.org"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  http://nodejs.org
                </a>
              </td>
            </tr>
            <tr>
              <td>
                Azure
              </td>
              <td>
                PaaS
              </td>
              <td>
                <a
                  href="https://azure.microsoft.com"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://azure.microsoft.com
                </a>
              </td>
            </tr>
            <tr>
              <td>
                Next.js
              </td>
              <td>
                Web frameworks, Web servers
              </td>
              <td>
                <a
                  href="https://nextjs.org"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://nextjs.org
                </a>
              </td>
            </tr>
            <tr>
              <td>
                styled-components
              </td>
              <td>
                JavaScript frameworks, Development
              </td>
              <td>
                <a
                  href="https://styled-components.com"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://styled-components.com
                </a>
              </td>
            </tr>
            <tr>
              <td>
                Nginx
              </td>
              <td>
                Web servers, Reverse proxies
              </td>
              <td>
                <a
                  href="http://nginx.org/en"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  http://nginx.org/en
                </a>
              </td>
            </tr>
            <tr>
              <td>
                webpack
              </td>
              <td>
                Miscellaneous
              </td>
              <td>
                <a
                  href="https://webpack.js.org/"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://webpack.js.org/
                </a>
              </td>
            </tr>
            <tr>
              <td>
                Matomo Analytics
              </td>
              <td>
                Analytics
              </td>
              <td>
                <a
                  href="https://matomo.org"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://matomo.org
                </a>
              </td>
            </tr>
            <tr>
              <td>
                React
              </td>
              <td>
                JavaScript libraries
              </td>
              <td>
                <a
                  href="https://reactjs.org"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://reactjs.org
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="stats"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Stats
      </h5>
      <span>
        <span>
          Détection de la page /
          stats
        </span>
      </span>
      <a
        href="https://www.fabrique.social.gouv.fr/stats"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary :
         
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          F
        </button>
      </h3>
    </div>
  </div>,
]
`;

exports[`Should render full Url with screenshot 1`] = `
Array [
  <div
    className="fr-callout fr-mb-3w"
  >
    <h4
      className="fr-callout__title"
    >
      <a
        href="https://www.fabrique.social.gouv.fr"
        rel="noreferrer noopener"
        target="_blank"
      >
        https://www.fabrique.social.gouv.fr
      </a>
    </h4>
    <p
      className="fr-callout__text"
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        fabrique
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        social
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        sante
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        travail
      </button>
      <svg
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <polyline
          points="12 6 12 12 16 14"
        />
      </svg>
      <span
        title="2021-08-17T22:57:01.853Z"
      >
        Mise à jour il y a :
         
        4 mois
      </span>
    </p>
    <div>
      <img
        alt="Copie d'écran de https://www.fabrique.social.gouv.fr"
        src="https://dashlord.incubateur.net/report/aHR0cHM6Ly9hY2Nlc2xpYnJlLmJldGEuZ291di5mcg==/screenshot.jpeg"
      />
    </div>
  </div>,
  <div
    id="lighthouse"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        LightHouse
      </h5>
      <span>
        Informations collectées par l'outil Google LightHouse
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/lhr.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col"
        >
          <div>
            Moins de 25% des critères d'accessibilité peuvent être testés automatiquement,
             
            <strong>
              une expertise manuelle est requise
            </strong>
            .
            <br />
            <br />
            Ce score ne représente pas le score RGAA mais une partie des bonnes pratiques de base à appliquer.
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Accessibility
            </div>
            <div>
              93%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Performance
            </div>
            <div>
              45%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              SEO
            </div>
            <div>
              90%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Best Practices
            </div>
            <div>
              93%
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              First contentful Paint
            </div>
            <div>
              1.2s
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Time to interactive
            </div>
            <div>
              3.5s
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Total requests
            </div>
            <div>
              51
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Total weight
            </div>
            <div>
              7.6Mb
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="dependabot"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Dependabot
      </h5>
      <span>
        <span>
          Scan des vulnérabiliés du dépôt Github
           
          <a
            href="https://github.com/SocialGouv/www"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "white",
              }
            }
            target="_blank"
          >
            https://github.com/SocialGouv/www
          </a>
        </span>
      </span>
      <a
        href="https://github.com/SocialGouv/www/security/dependabot"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary : 
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          D
        </button>
      </h3>
      <div
        className="fr-table"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Sévérité
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Dépendance vulnérable
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Vulnérabilités
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  HIGH
                </button>
              </td>
              <td>
                trim
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2020-7753"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2020-7753
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-w5p7-h5w8-2hfq"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-w5p7-h5w8-2hfq
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  HIGH
                </button>
              </td>
              <td>
                glob-parent
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2020-28469"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2020-28469
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-ww39-953v-wcq6"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-ww39-953v-wcq6
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                highlight.js
              </td>
              <td>
                <p>
                  <a
                    href="https://github.com/highlightjs/highlight.js/security/advisories/GHSA-7wwv-vh3v-89cq"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-7wwv-vh3v-89cq
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-7wwv-vh3v-89cq"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-7wwv-vh3v-89cq
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                browserslist
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-23364"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-23364
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-w8qv-6jwh-64r5"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-w8qv-6jwh-64r5
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                postcss
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-23368"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-23368
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-hwj9-h5mp-3pm3"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-hwj9-h5mp-3pm3
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                postcss
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-23368"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-23368
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-hwj9-h5mp-3pm3"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-hwj9-h5mp-3pm3
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                path-parse
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-23343"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-23343
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-hj48-42vr-x3v9"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-hj48-42vr-x3v9
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                next
              </td>
              <td>
                <p>
                  <a
                    href="https://github.com/vercel/next.js/security/advisories/GHSA-vxf5-wxwp-m7g9"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-vxf5-wxwp-m7g9
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-37699"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-37699
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-vxf5-wxwp-m7g9"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-vxf5-wxwp-m7g9
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  MODERATE
                </button>
              </td>
              <td>
                url-parse
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-3664"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2021-3664
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-hh27-ffr2-f2jc"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-hh27-ffr2-f2jc
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  LOW
                </button>
              </td>
              <td>
                highlight.js
              </td>
              <td>
                <p>
                  <a
                    href="https://github.com/highlightjs/highlight.js/security/advisories/GHSA-vfrc-7r7c-w9mx"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-vfrc-7r7c-w9mx
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2020-26237"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2020-26237
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-vfrc-7r7c-w9mx"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    GHSA-vfrc-7r7c-w9mx
                  </a>
                  <br />
                </p>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="codescan"
  />,
  <div
    id="updownio"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Temps de réponse
      </h5>
      <span>
        Informations collectées par updown.io
      </span>
      <a
        href="https://updown.io/rt57"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Taux de disponibilité sur un mois glissant
            </div>
            <div>
              100%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Temps de réponse
            </div>
            <div>
              91ms
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              APDEX
            </div>
            <div>
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                1
              </button>
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              Certificat TLS
               
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                valide
              </button>
            </div>
            <div>
              expire le 19/10/2021
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="testssl"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        SSL
      </h5>
      <span>
        Informations collectées via testssl.sh
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/testssl.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col"
        >
          <h3>
            Scan Summary :
             
            <button
              className=""
              onClick={[Function]}
              type="button"
            >
              A+
            </button>
          </h3>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="http"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        HTTP
      </h5>
      <span>
        Informations collectées par le Mozilla HTTP observatory
      </span>
      <a
        href="https://observatory.mozilla.org/analyze/www.fabrique.social.gouv.fr"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary :
         
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          A+
        </button>
      </h3>
      0
    </div>
  </div>,
  <div
    id="thirdparties"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Third parties
      </h5>
      <span>
        Scripts tiers embarqués dans la page web
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Cookies
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Cookies
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Domaine
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                HTTP Only
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Secure
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                _pk_ses.2.6321
              </td>
              <td>
                www.fabrique.social.gouv.fr
              </td>
              <td>
                ❌
              </td>
              <td>
                ❌
              </td>
            </tr>
            <tr>
              <td>
                _pk_id.2.6321
              </td>
              <td>
                www.fabrique.social.gouv.fr
              </td>
              <td>
                ❌
              </td>
              <td>
                ❌
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            End Points
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Flag
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Hostname
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                IP
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                City
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Country
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <svg
                  style={
                    Object {
                      "width": 60,
                    }
                  }
                  viewBox="0 85.333 512 341.333"
                >
                  <title>
                    France
                  </title>
                  <path
                    d="M0 85.331h512v341.337H0z"
                    fill="#FFF"
                  />
                  <path
                    d="M0 85.331h170.663v341.337H0z"
                    fill="#0052B4"
                  />
                  <path
                    d="M341.337 85.331H512v341.337H341.337z"
                    fill="#D80027"
                  />
                </svg>
              </td>
              <td>
                www.fabrique.social.gouv.fr
              </td>
              <td>
                20.74.14.77
              </td>
              <td>
                Paris
              </td>
              <td>
                France
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="zap"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        OWASP
      </h5>
      <span>
        Scan de vulnérabiliés OWASP baseline
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/zap.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Owasp
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Risk/Confidence
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                CSP: Wildcard Directive
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                CSP: style-src unsafe-inline
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                Reverse Tabnabbing
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (High)
                </button>
              </td>
              <td>
                Server Leaks Version Information via "Server" HTTP Response Header Field
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (High)
                </button>
              </td>
              <td>
                In Page Banner Information Leak
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Incomplete or No Cache-control Header Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Permissions Policy Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Informational (Medium)
                </button>
              </td>
              <td>
                Storable and Cacheable Content
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Informational (Medium)
                </button>
              </td>
              <td>
                Modern Web Application
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Informational (Medium)
                </button>
              </td>
              <td>
                Base64 Disclosure
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="nuclei"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Nuclei
      </h5>
      <span>
        Détection d'erreurs de configuration et vulnérabilités
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Nuclei
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Séverité
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                id
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Matcher
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                nginx-version
              </td>
              <td>
                nginx version detect
              </td>
              <td />
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                tech-detect
              </td>
              <td>
                Wappalyzer Technology Detection
              </td>
              <td>
                nginx
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                can-i-take-over-dns
              </td>
              <td>
                Can I Take Over DNS - Fingerprint
              </td>
              <td>
                azure
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="wappalyzer"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Wappalyzer
      </h5>
      <span>
        Détection des technologies
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Wappalyzer
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Categories
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Website
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Node.js
              </td>
              <td>
                Programming languages
              </td>
              <td>
                <a
                  href="http://nodejs.org"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  http://nodejs.org
                </a>
              </td>
            </tr>
            <tr>
              <td>
                Azure
              </td>
              <td>
                PaaS
              </td>
              <td>
                <a
                  href="https://azure.microsoft.com"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://azure.microsoft.com
                </a>
              </td>
            </tr>
            <tr>
              <td>
                Next.js
              </td>
              <td>
                Web frameworks, Web servers
              </td>
              <td>
                <a
                  href="https://nextjs.org"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://nextjs.org
                </a>
              </td>
            </tr>
            <tr>
              <td>
                styled-components
              </td>
              <td>
                JavaScript frameworks, Development
              </td>
              <td>
                <a
                  href="https://styled-components.com"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://styled-components.com
                </a>
              </td>
            </tr>
            <tr>
              <td>
                Nginx
              </td>
              <td>
                Web servers, Reverse proxies
              </td>
              <td>
                <a
                  href="http://nginx.org/en"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  http://nginx.org/en
                </a>
              </td>
            </tr>
            <tr>
              <td>
                webpack
              </td>
              <td>
                Miscellaneous
              </td>
              <td>
                <a
                  href="https://webpack.js.org/"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://webpack.js.org/
                </a>
              </td>
            </tr>
            <tr>
              <td>
                Matomo Analytics
              </td>
              <td>
                Analytics
              </td>
              <td>
                <a
                  href="https://matomo.org"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://matomo.org
                </a>
              </td>
            </tr>
            <tr>
              <td>
                React
              </td>
              <td>
                JavaScript libraries
              </td>
              <td>
                <a
                  href="https://reactjs.org"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://reactjs.org
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="stats"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Stats
      </h5>
      <span>
        <span>
          Détection de la page /
          stats
        </span>
      </span>
      <a
        href="https://www.fabrique.social.gouv.fr/stats"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary :
         
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          F
        </button>
      </h3>
    </div>
  </div>,
]
`;

exports[`Tools config Should render Url with limited tools 1`] = `
Array [
  <div
    className="fr-callout fr-mb-3w"
  >
    <h4
      className="fr-callout__title"
    >
      <a
        rel="noreferrer noopener"
        target="_blank"
      />
    </h4>
    <p
      className="fr-callout__text"
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        fabrique
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        social
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        sante
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        travail
      </button>
      <svg
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <polyline
          points="12 6 12 12 16 14"
        />
      </svg>
      <span
        title="2021-08-17T22:57:01.853Z"
      >
        Mise à jour il y a :
         
        4 mois
      </span>
    </p>
    <div>
      <img
        alt="Copie d'écran de undefined"
        src="https://dashlord.incubateur.net/report/aHR0cHM6Ly9hY2Nlc2xpYnJlLmJldGEuZ291di5mcg==/screenshot.jpeg"
      />
    </div>
  </div>,
  <div
    id="zap"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        OWASP
      </h5>
      <span>
        Scan de vulnérabiliés OWASP baseline
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/dW5kZWZpbmVk/zap.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Owasp
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Risk/Confidence
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                CSP: Wildcard Directive
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                CSP: style-src unsafe-inline
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                Reverse Tabnabbing
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (High)
                </button>
              </td>
              <td>
                Server Leaks Version Information via "Server" HTTP Response Header Field
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (High)
                </button>
              </td>
              <td>
                In Page Banner Information Leak
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Incomplete or No Cache-control Header Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Permissions Policy Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Informational (Medium)
                </button>
              </td>
              <td>
                Storable and Cacheable Content
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Informational (Medium)
                </button>
              </td>
              <td>
                Modern Web Application
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Informational (Medium)
                </button>
              </td>
              <td>
                Base64 Disclosure
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;
